# calculation-extraction

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json
calibration/: populate.py
config/: nmr_tools.toml.example  tensorcs15.manifest.toml
data/: calculator_params.toml
docker/: audit-vendor-payload.sh  biology-tools.env.yml  collect-local-vendor-deps.sh  delivery-smoke.sh  deps-vendor.Dockerfile  deps-vendor.Dockerfile.dockerignore  export-tensorcs15-dump.sh  molprobity.env.yml  nmr-container-entrypoint.sh  producer-full.Dockerfile  producer-full.Dockerfile.dockerignore
h5-reader/: CMakeLists.txt  CMakePresets.json  launch_reader.ps1  launch_reader.sh  udp_listen.py
h5-reader/cmake/: BuildType-Debug.cmake  BuildType-Release.cmake  DiscoverDeps.cmake  Platform-Darwin.cmake  Platform-Linux.cmake  Platform-Windows.cmake
h5-reader/scripts/: gen_field_catalog.py
h5-reader/src/: main_reader.cpp
h5-reader/src/app/: AbstractStripPanel.cpp  AbstractStripPanel.h  CameraAnchorHelper.cpp  CameraAnchorHelper.h  CameraComposer.cpp  CameraComposer.h  CameraInputFilter.cpp  CameraInputFilter.h  CameraMode.h  ChordCouplingPanel.cpp  ChordCouplingPanel.h  DashboardDisplayController.cpp  DashboardDisplayController.h  DashboardStripDock.cpp  DashboardStripDock.h  FitTargetMath.h  FixedFreqPanel.cpp  FixedFreqPanel.h  LagDecayPanel.cpp  LagDecayPanel.h  MeasurementOverlay.cpp  MeasurementOverlay.h  MoleculeScene.cpp  MoleculeScene.h  NearbySignalModel.cpp  NearbySignalModel.h  OrientationPolicy.h  PlaneFrameMath.h  PowerSpectrumPanel.cpp  PowerSpectrumPanel.h  QtAtomInspectorDock.cpp  QtAtomInspectorDock.h  QtAtomPicker.cpp  QtAtomPicker.h  QtBFieldStreamOverlay.cpp  QtBFieldStreamOverlay.h  QtBackboneRibbonOverlay.cpp  QtBackboneRibbonOverlay.h  QtFieldGridOverlay.cpp  QtFieldGridOverlay.h  (+24 more)
h5-reader/src/calculators/: QtBiotSavartCalc.cpp  QtBiotSavartCalc.h  QtHaighMallionCalc.h  QtPhysicalConstants.h
h5-reader/src/diagnostics/: ConnectionAuditor.h  StructuredLogger.cpp  StructuredLogger.h
h5-reader/src/io/: CalcsetManifest.cpp  CalcsetManifest.h  DftShieldingLoader.cpp  DftShieldingLoader.h  FrameNpyLoader.cpp  FrameNpyLoader.h  OrcaShieldingParser.cpp  OrcaShieldingParser.h  QtEnumVocab.cpp  QtEnumVocab.h  QtFieldCatalog.gen.h  QtManifest.cpp  QtManifest.h  QtNpyReader.cpp  QtNpyReader.h  QtNpyRecords.h  QtProteinLoader.cpp  QtProteinLoader.h  QtTopologySidecar.cpp  QtTopologySidecar.h  QtTrajectoryH5.cpp  QtTrajectoryH5.h  TrajectoryFrameMap.cpp  TrajectoryFrameMap.h
h5-reader/src/model/: AtomSelection.cpp  AtomSelection.h  Conformation.cpp  Conformation.h  ConformationGeometry.cpp  ConformationGeometry.h  DashboardPanelModel.cpp  DashboardPanelModel.h  DashboardSignal.cpp  DashboardSignal.h  DashboardSignalModel.cpp  DashboardSignalModel.h  DftShielding.h  DftShieldingStore.cpp  DftShieldingStore.h  QtAimnet2Group.h  QtAminoAcidType.cpp  QtAminoAcidType.h  QtApbsGroup.h  QtAtom.h  QtAtomNames.h  QtBiotSavartGroup.h  QtBond.h  QtBondVectorBuffers.h  QtBondedGroup.h  QtChainAddress.h  QtConformationSnapshot.h  QtCoulombGroup.h  QtDispersionGroup.h  QtDsspGroup.h  QtEeqGroup.h  QtFrame.cpp  QtFrame.h  QtFrameAtomView.h  QtGromacsGroup.h  QtHBondGroup.h  QtHaighMallionGroup.h  QtHydrationGroup.h  QtLarsenHBondGroup.h  QtMcConnellGroup.h  (+48 more)
h5-reader/src/rediscover/: Aimnet2Feature.cpp  Aimnet2Feature.h  Aimnet2FeatureSink.cpp  Aimnet2FeatureSink.h  AllAtomEquivariant.cpp  AllAtomEquivariant.h  AllAtomEquivariantSink.cpp  AllAtomEquivariantSink.h  AnalysisBody.h  BroadBackbone.cpp  BroadBackbone.h  BroadBackboneSink.cpp  BroadBackboneSink.h  BuckinghamEfield.cpp  BuckinghamEfield.h  BuckinghamEfieldSink.cpp  BuckinghamEfieldSink.h  Catalog.cpp  Catalog.h  ChargeDipoleNeighborhood.cpp  ChargeDipoleNeighborhood.h  ChargeStore.cpp  ChargeStore.h  ComposedRelationships.cpp  ComposedRelationships.h  EfgFeature.cpp  EfgFeature.h  EfgFeatureSink.cpp  EfgFeatureSink.h  ExtractionSupport.cpp  ExtractionSupport.h  FrameSpatialIndex.cpp  FrameSpatialIndex.h  LocalFrameBasis.cpp  LocalFrameBasis.h  MC_LIT_CSV_CONTRACT.json  McConnellLiteratureKernel.cpp  McConnellLiteratureKernel.h  McConnellNeighborhood.cpp  McConnellNeighborhood.h  (+31 more)
h5-reader/tests/: calcset_manifest_tests.cpp  dashboard_controller_tests.cpp  dashboard_model_tests.cpp  dft_shielding_loader_tests.cpp  qttrajectoryh5_tests.cpp  rediscover_all_atom_equivariant_tests.cpp  rediscover_backbone_frame_tests.cpp  rediscover_basis_tests.cpp  rediscover_buckingham_tests.cpp  rediscover_efg_tests.cpp  scene_math_tests.cpp  test_rediscover_run.py  trajectory_frame_map_tests.cpp
h5-reader/tests/rest/: conftest.py  test_camera_plane_lock.py  test_dashboard_path.py  test_signal_cascade.py
h5-reader/tests/scripts/: viewport_probe.py
h5-reader/tools/: lgs_write.py  rediscover_run.py
scripts/: batch_extract.sh  dump_tripeptide_orderings.py  nmr-shielding-doctor.sh  run_with_cuda_env.sh  tensorcs15-check.py
src/: AIMNet2ChargeResponseGradientResult.cpp  AIMNet2ChargeResponseGradientResult.h  AIMNet2ChargeResponseGradientTimeSeriesTrajectoryResult.cpp  AIMNet2ChargeResponseGradientTimeSeriesTrajectoryResult.h  AIMNet2ChargeResponseGradientWelfordTrajectoryResult.cpp  AIMNet2ChargeResponseGradientWelfordTrajectoryResult.h  AIMNet2ChargeTimeSeriesTrajectoryResult.h  AIMNet2EmbeddingTimeSeriesTrajectoryResult.cpp  AIMNet2EmbeddingTimeSeriesTrajectoryResult.h  AIMNet2Result.cpp  AIMNet2Result.h  AmberChargeResolver.cpp  AmberChargeResolver.h  AmberLeapInput.cpp  AmberLeapInput.h  AmberPreparedChargeSource.cpp  AmberPreparedChargeSource.h  AminoAcidType.cpp  AminoAcidType.h  ApbsEfgTimeSeriesTrajectoryResult.cpp  ApbsEfgTimeSeriesTrajectoryResult.h  ApbsEfieldTimeSeriesTrajectoryResult.h  ApbsFieldResult.cpp  ApbsFieldResult.h  Atom.h  AtomEvent.h  BiotSavartResult.cpp  BiotSavartResult.h  Bond.h  BondLengthStatsTrajectoryResult.h  BondedEnergyResult.cpp  BondedEnergyResult.h  BsWelfordTrajectoryResult.cpp  (+246 more)
tools/topology/: CMakeLists.txt  build_semantic_tables.cpp
(+128 files in other folders)
